fix: layout shifting in login and register on input focus

--- a/src/components/AddAccount/AddAccount.module.scss
+++ b/src/components/AddAccount/AddAccount.module.scss
@@ -81,7 +81,7 @@
         font-size: 16px;
 
         &:not([type=submit]):focus {
-            border-bottom: 3px solid #dae6fd;
+            border-bottom-color: #dae6fd;
         }
     }
 
